--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">SportsFeed</string>
+    <string name="errorsLabel">E</string>
+    <string name="hitsLabel">H</string>
+    <string name="runsLabel">R</string>
 </resources>
