--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="errorsLabel">E</string>
     <string name="hitsLabel">H</string>
     <string name="runsLabel">R</string>
+    <string name="action_settings">Settings</string>
 </resources>
