Added progress bar and toasts for failed network requests

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="errorsLabel">E</string>
     <string name="hitsLabel">H</string>
     <string name="runsLabel">R</string>
+    <string name="data_fetch_error">Could not fetch data</string>
 </resources>
